Fix the task deadline parsing issue